--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -12,6 +12,7 @@
         <whitelist>
             <directory>./</directory>
             <exclude>
+                <directory>./vendor</directory>
                 <directory>./Resources</directory>
                 <directory>./Tests</directory>
             </exclude>
