--- a/composer.json
+++ b/composer.json
@@ -20,8 +20,7 @@
         "symfony/validator": "2.*",
         "twig/twig": "1.*",
         "symfony/doctrine-bridge": "2.*,>=2.6",
-        "symfony/expression-language": "2.*,>=2.6",
-        "jms/translation-bundle": "dev-master"
+        "symfony/expression-language": "2.*,>=2.6"
     },
     "require-dev": {
         "h4cc/alice-fixtures-bundle": "0.5.x",
