Added encrypted text type to allow storing of sensitive data in the database

--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,9 @@
         "symfony/validator": "2.*",
         "twig/twig": "1.*",
         "symfony/doctrine-bridge": "2.*,>=2.6",
-        "symfony/expression-language": "2.*,>=2.6"
+        "symfony/expression-language": "2.*,>=2.6",
+        "zendframework/zend-filter": "2.5.*",
+        "zendframework/zend-crypt": "2.5.*"
     },
     "require-dev": {
         "h4cc/alice-fixtures-bundle": "0.5.x",
