Updated composer deps

--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,7 @@
         "symfony/expression-language": "2.*,>=2.6",
         "zendframework/zend-filter": "2.5.*",
         "zendframework/zend-crypt": "2.5.*",
-        "kmj/awsbundle": "dev-master"
+        "kmj/awsbundle": "1.0.x-dev"
     },
     "require-dev": {
         "h4cc/alice-fixtures-bundle": "0.5.x",
