--- a/DataFixtures/Alice/Fixtures/roles.yml
+++ b/DataFixtures/Alice/Fixtures/roles.yml
@@ -5,12 +5,12 @@
         description: "Role for developer. Use with caution"
     admin: 
         name: role_admin
-        parent: @superadmin
+        parent: "@superadmin"
         displayName: "Administrator"
         description: "Role for site administrator. Allows the user that has the role to change site settings"
     user:
         name: role_user
-        parent: @admin
+        parent: "@admin"
         displayName: "Standard User"
         description: "Role for standard user level access."
        
