--- a/Resources/config/alice.yml
+++ b/Resources/config/alice.yml
@@ -2,6 +2,6 @@ services:
     kmj_toolkit.alice.user.processor:
         class: KMJ\ToolkitBundle\DataFixtures\Alice\Processor\UserProcessor
         arguments:
-            - @fos_user.user_manager
+            - "@fos_user.user_manager"
         tags:
             - { name: h4cc_alice_fixtures.processor }
