--- a/composer.json
+++ b/composer.json
@@ -12,15 +12,13 @@
         }
     ],
     "require": {
-        "php": ">=5.4.0"
-    },
-    "require-dev": {
+        "php": ">=5.4.0",
+        "zendframework/zend-crypt": "^2.6",
+        "zendframework/zend-filter": "^2.6"
     },
     "autoload": {
-        "psr-0": {
-            "KMJ\\ToolkitBundle": ""
+        "psr-4": {
+            "KMJ\\ToolkitBundle\\": ""
         }
-    },
-    "minimum-stability": "stable",
-    "target-dir": "KMJ/ToolkitBundle"
+    }
 }
