--- a/composer.json
+++ b/composer.json
@@ -15,12 +15,12 @@
         "php": ">=5.4.0",
         "zendframework/zend-crypt": "^2.6",
         "zendframework/zend-filter": "^2.6",
-        "friendsofsymfony/user-bundle": "~2.0@dev",
-        "satooshi/php-coveralls": "^1.0"
+        "friendsofsymfony/user-bundle": "~2.0@dev"
     },
     "require-dev": {
         "phpunit/phpunit": "^5.2",
-        "h4cc/alice-fixtures-bundle": "dev-master"
+        "h4cc/alice-fixtures-bundle": "dev-master",
+        "satooshi/php-coveralls": "^1.0"
     },
     "repositories":
             [
