Added basic boostrap menu

--- a/Resources/config/services.yml
+++ b/Resources/config/services.yml
@@ -38,3 +38,9 @@ services:
         arguments:
             - "%security.role_hierarchy.roles%"
             - "@doctrine.orm.entity_manager"
+
+    kmj_toolkit.twig.extension.menu:
+        class: KMJ\ToolkitBundle\TwigExtension\MenuExtension
+        arguments: ["@knp_menu.helper"]
+        tags:
+            - { name: "twig.extension" }
