Added better support for php features by implementing ::class as strings and also added a filter event to the crud controller

--- a/Resources/config/services.yml
+++ b/Resources/config/services.yml
@@ -1,4 +1,11 @@
 services:
+    kmj_toolkit.form.select2type:
+        class: KMJ\ToolkitBundle\Form\Type\Select2Type
+        arguments:
+            - '@doctrine.orm.entity_manager'
+        tags:
+            - { name: form.type }
+
     kmj_toolkit.subscriber.password_reset:
         class: KMJ\ToolkitBundle\Subscriber\PasswordResetSubscriber
         arguments:
