--- a/composer.json
+++ b/composer.json
@@ -1,37 +1,40 @@
 {
-    "name": "kmj/toolkitbundle",
-    "type": "symfony-bundle",
-    "description": "Symfony2 Bundle that adds basic user account entity and city/state/country setup as well",
-    "keywords": ["KMJ", "toolkit"],
-    "homepage": "http://github.com/Demoboy/ToolkitBundle",
-    "license": "MIT",
-    "authors": [
-        {
-            "name": "Kaelin Jacobson",
-            "email": "kaelinjacobson@gmail.com"
-        }
-    ],
-    "require": {
-        "php": ">=5.4.0",
-        "zendframework/zend-crypt": "^2.6",
-        "zendframework/zend-filter": "^2.6",
-        "friendsofsymfony/user-bundle": "~2.0@dev"
-    },
-    "require-dev": {
-        "phpunit/phpunit": "^5.2",
-        "h4cc/alice-fixtures-bundle": "dev-master",
-        "satooshi/php-coveralls": "^1.0"
-    },
-    "repositories":
-            [
-                {
-                    "type": "vcs",
-                    "url": "https://github.com/Demoboy/AliceFixturesBundle"
-                }
-            ],
-    "autoload": {
-        "psr-4": {
-            "KMJ\\ToolkitBundle\\": ""
-        }
+  "name": "kmj/toolkitbundle",
+  "type": "symfony-bundle",
+  "description": "Symfony2 Bundle that adds basic user account entity and city/state/country setup as well",
+  "keywords": [
+    "KMJ",
+    "toolkit"
+  ],
+  "homepage": "http://github.com/Demoboy/ToolkitBundle",
+  "license": "MIT",
+  "authors": [
+    {
+      "name": "Kaelin Jacobson",
+      "email": "kaelinjacobson@gmail.com"
     }
+  ],
+  "require": {
+    "php": ">=5.4.0",
+    "zendframework/zend-crypt": "~2.6",
+    "zendframework/zend-filter": "~2.6",
+    "knplabs/knp-paginator-bundle": "~2.5",
+    "friendsofsymfony/user-bundle": "~2.0@dev"
+  },
+  "require-dev": {
+    "phpunit/phpunit": "~5.2",
+    "h4cc/alice-fixtures-bundle": "dev-master",
+    "satooshi/php-coveralls": "~1.0"
+  },
+  "repositories": [
+    {
+      "type": "vcs",
+      "url": "https://github.com/Demoboy/AliceFixturesBundle"
+    }
+  ],
+  "autoload": {
+    "psr-4": {
+      "KMJ\\ToolkitBundle\\": ""
+    }
+  }
 }
