--- a/composer.json
+++ b/composer.json
@@ -15,11 +15,13 @@
     }
   ],
   "require": {
-    "php": ">=5.4.0",
+    "php": ">=7.0.0",
     "zendframework/zend-crypt": "~2.6",
     "zendframework/zend-filter": "~2.6",
     "knplabs/knp-paginator-bundle": "~2.5",
-    "friendsofsymfony/user-bundle": "~2.0@dev"
+    "friendsofsymfony/user-bundle": "~2.0@dev",
+    "symfony/symfony": "^3.3",
+    "doctrine/orm": "^2.5"
   },
   "require-dev": {
     "phpunit/phpunit": "~5.2",
