--- a/composer.json
+++ b/composer.json
@@ -20,9 +20,19 @@
     "zendframework/zend-filter": "~2.6",
     "knplabs/knp-paginator-bundle": "~2.5",
     "friendsofsymfony/user-bundle": "~2.0@dev",
-    "symfony/symfony": "~2.7|~3.0|~4.0",
+    "symfony/framework-bundle": "~2.7|~3.0|~4.0",
     "doctrine/orm": "^2.5"
   },
+  "require-dev": {
+    "phpunit/phpunit": "~5.2",
+    "satooshi/php-coveralls": "~1.0"
+  },
+  "repositories": [
+    {
+      "type": "vcs",
+      "url": "https://github.com/Demoboy/AliceFixturesBundle"
+    }
+  ],
   "autoload": {
     "psr-4": {
       "KMJ\\ToolkitBundle\\": ""
